# enigma2-plugins

./: Makefile.am  configure.ac
AudioEffect/po/: Makefile.am
BTDevicesManager/po/: Makefile.am
DLNABrowser/po/: Makefile.am
DLNAServer/po/: Makefile.am
HbbTV/po/: Makefile.am
VuBluetoothSetup/src/: Makefile.am
VuChromium/po/: Makefile.am
VuStalker/po/: Makefile.am
VuStalker/src/: Makefile.am  SCInfo.py
WebBrowser/po/: Makefile.am
WebkitHbbTV/po/: Makefile.am
automaticvolumeadjustment/src/: __init__.py
autotimer/src/: plugin.py
blindscan/src/: plugin.py
dvdbackup/src/: plugin.py
imdb/src/: __init__.py
logomanager/src/: __init__.py
merlinmusicplayer/src/: __init__.py
systemtime/src/: __init__.py
transcodingsetup/src/: __init__.py
vfdcontrol/src/: __init__.py
weatherplugin/CONTROL/: control
weatherplugin/po/: Makefile.am
